Created and compiled typescript version of script.js

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
             <button id="add-btn" class="btn">Add</button>
         </div>
     </div>
-    <script type="text/javascript" src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
